# magespace-importer

./: .coveragerc  LICENSE  LICENSE.txt  README.md  setup.cfg  setup.py
src/magespace_importer/: __init__.py  __main__.py
