# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = magespace_importer
description = A simple tool that facilitates importing models into mage.space
author = Adam Twardoch
author_email = adam+github@twardoch.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/twardoch/magespace-importer
project_urls =
    Source = https://github.com/twardoch/magespace-importer

platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.10

install_requires =
    fire>=0.5.0
    selenium>=4.16.0
    tqdm>=4.66.1
    undetected_chromedriver>=3.5.4

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
console_scripts =
    magespace_importer = magespace_importer.__main__:cli


[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = magespace_importer
extensions =
    markdown
